--- a/Backend/config.env.example
+++ b/Backend/config.env.example
@@ -1,31 +1,36 @@
+# ===========================================
+# MATHEMATICO BACKEND - ENVIRONMENT CONFIG
+# ===========================================
+# Copy this file to config.env and fill in your actual values
+# NEVER commit config.env to git - it contains sensitive data!
+
 # Server Configuration
 PORT=5000
 NODE_ENV=production
 
 # Database Configuration
-DB_HOST=your_database_host
+# Replace with your actual database credentials
+DB_HOST=your-database-host.com
 DB_PORT=3306
-DB_USERNAME=your_database_username
-DB_PASSWORD=your_database_password
-DB_DATABASE=your_database_name
+DB_USERNAME=your-db-username
+DB_PASSWORD=your-secure-db-password
+DB_DATABASE=your-database-name
 
-# JWT Configuration (SINGLE LINE!!!)
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+# JWT Configuration
+# Generate secure random strings (256-bit minimum)
+JWT_SECRET=your-super-secure-jwt-secret-key-here-minimum-64-chars
+JWT_REFRESH_SECRET=your-super-secure-refresh-secret-key-here-minimum-64-chars
 JWT_ACCESS_EXPIRES_IN=1d
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Admin Configuration
+# Use strong passwords and consider using environment-specific admin accounts
 ADMIN_EMAIL=admin@yourdomain.com
-ADMIN_PASSWORD=your-secure-admin-password
+ADMIN_PASSWORD=your-very-secure-admin-password
 
 # Backend Configuration
 BACKEND_URL=https://your-backend-domain.com
 
-# Frontend Configuration
-FRONTEND_URL=https://your-frontend-domain.com
-
-# Mobile Configuration
 MOBILE_API_URL=https://your-backend-domain.com/api/v1
 
 # File Upload Configuration
@@ -33,11 +38,11 @@ MAX_FILE_SIZE=10485760
 UPLOAD_PATH=uploads
 STORAGE_SERVICE=cloudinary
 
-# Cloudinary Configuration (for file uploads)
-# Get these from https://cloudinary.com/console
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+# Cloudinary Configuration
+# Get these from your Cloudinary dashboard
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 
 # Security Configuration
 CORS_ORIGIN=https://your-frontend-domain.com
@@ -45,17 +50,14 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Email Configuration
+# Use app-specific passwords for Gmail
 EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password-here
+EMAIL_PASSWORD=your-app-specific-password
 EMAIL_FROM=Your App <noreply@yourdomain.com>
 
-# Ethereal Email (for development/testing)
-ETHEREAL_USER=ethereal.user@ethereal.email
-ETHEREAL_PASS=ethereal.pass
-
-# Razorpay Configuration (for payments)
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+# Payment Configuration (Razorpay)
+RAZORPAY_KEY_ID=your-razorpay-key-id
+RAZORPAY_KEY_SECRET=your-razorpay-key-secret
 
 # Production Configuration
 API_PREFIX=/api/v1
@@ -66,5 +68,5 @@ DB_LOGGING=false
 DEFAULT_CURRENCY=INR
 CURRENCY_SYMBOL=₹
 
-# Vercel Configuration (set to 1 when deploying to Vercel)
+# Vercel Configuration
 VERCEL=1
